# u-forge.ai

./: .env  .gitignore  .rules  ARCHITECTURE.md  CLAUDE.MD  CLAUDE.md  CXXQT_MIGRATION.md  Cargo.toml  DEVELOPMENT.md  PATH_CONFIGURATION.md  README.md  SCHEMA_SYSTEM.md  UI_GUIDE.md  bug_bash-01.md  bug_bash-02.md  build.sh  debug-dev.sh  dev.sh  env.sh  feature_ChatDemo.md  feature_ChatPolish02.md  feature_ChatTextSelection.md  feature_ExampleDedup.md  feature_File-Folder-Chooser.md  feature_SchemaEditorAndMigrator.md  feature_TS-Agent-Sandbox.md  feature_UI.md  feature_WeightedEmbeddingDispatch_TOMLConf.md  feature_code-review-followups.md  feature_core-refactor.md  feature_node-edge-editing.md  feature_refactor-hardware-logic.md  feature_refactorTests.md  migration.md  run-debug.sh  u-forge.toml
.cursor/rules/: development-workflow.mdc  environment-config.mdc  json-data-formats.mdc  project-structure.mdc  rust-patterns.mdc  schema-system.mdc  testing-debugging.mdc
.rules/: development-workflow.mdc  environment-config.mdc  project-structure.mdc  schema-system.mdc  testing-debugging.mdc
.rulesdir/: development-workflow.mdc  environment-config.mdc  gpui-patterns.mdc  json-data-formats.mdc  project-structure.mdc  rust-patterns.mdc  schema-system.mdc  testing-debugging.mdc
backend/: Cargo.toml  dev.sh
backend/src/: data_ingestion.rs  embedding_queue.rs  lib.rs  schema_ingestion.rs  schema_manager.rs  vector_search.rs
crates/cosmic-text-patched/: .cargo_vcs_info.json
crates/cosmic-text-patched/src/: shape.rs
crates/u-forge-agent/: Cargo.toml
crates/u-forge-agent/src/: lib.rs
crates/u-forge-core/: Cargo.toml
crates/u-forge-core/assets/: model_context_limits.json
crates/u-forge-core/examples/: cli_chat.rs  cli_demo.rs  convert_memorymesh.rs
crates/u-forge-core/examples/common/: mod.rs
crates/u-forge-core/src/: builder.rs  config.rs  error.rs  lib.rs  lib_tests.rs  rag.rs  test_helpers.rs  text.rs  types.rs
crates/u-forge-core/src/ai/: embeddings.rs  mod.rs  transcription.rs
crates/u-forge-core/src/graph/: chunks.rs  edges.rs  fts.rs  mod.rs  nodes.rs  positions.rs  storage.rs  traversal.rs
crates/u-forge-core/src/hardware/: cpu.rs  gpu.rs  mod.rs  npu.rs
crates/u-forge-core/src/ingest/: data.rs  embedding.rs  mod.rs  pipeline.rs
crates/u-forge-core/src/lemonade/: catalog.rs  chat.rs  client.rs  device_factory.rs  duplicate_guard.rs  embedding.rs  gpu_manager.rs  health.rs  load.rs  mod.rs  model_limits.rs  provider_factory.rs  registry.rs  rerank.rs  selector.rs  stack.rs  stt.rs  system_info.rs  transcription.rs  tts.rs
crates/u-forge-core/src/queue/: builder.rs  dispatch.rs  jobs.rs  mod.rs  weighted.rs  workers.rs
crates/u-forge-core/src/schema/: definition.rs  ingestion.rs  manager.rs  mod.rs
crates/u-forge-core/src/search/: mod.rs  sanitize.rs
crates/u-forge-graph-view/: Cargo.toml
crates/u-forge-graph-view/src/: layout.rs  lib.rs  observable.rs  snapshot.rs  spatial.rs
crates/u-forge-ts-runtime/: Cargo.toml
crates/u-forge-ts-runtime/src/: lib.rs
crates/u-forge-ui-egui/: Cargo.toml
crates/u-forge-ui-egui/src/: main.rs
crates/u-forge-ui-gpui/: Cargo.toml
crates/u-forge-ui-gpui/src/: chat_history.rs  chat_message.rs  chat_panel.rs  graph_canvas.rs  lib.rs  main.rs  node_panel.rs  path_picker.rs  right_panel.rs  search_panel.rs  selection_model.rs  text_field.rs  tree_panel.rs
crates/u-forge-ui-gpui/src/app_view/: mod.rs  render.rs  state.rs
crates/u-forge-ui-gpui/src/node_editor/: field_spec.rs  mod.rs  render.rs
crates/u-forge-ui-traits/: Cargo.toml
crates/u-forge-ui-traits/src/: lib.rs
cxx-qt-app/: Cargo.toml  README.md  build.rs  run.sh
cxx-qt-app/qml/: main.qml
cxx-qt-app/qml/components/: AIAgentPanel.qml  ContentEditor.qml  CustomToolTip.qml  ExplorerPanel.qml  KnowledgeGraphPanel.qml  MainToolbar.qml
cxx-qt-app/qml/styles/: Theme.qml
cxx-qt-app/src/: demo_object.rs  main.rs
defaults/: demo_config.json  demo_config.toml
defaults/data/: memory.json  memory.jsonl
defaults/schemas/: faction.schema.json  location.schema.json  npc.schema.json  quest.schema.json  skills.schema.json  temporal.schema.json
examples/: background_embedding_demo.rs  cli_demo.rs  embedding_performance_test.rs  hnsw_test.rs  schema_demo.rs  schema_test.rs  swn_demo.rs  ui_responsiveness_test.rs
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: types.ts
frontend/src/lib/components/: AIPanel.svelte  ContentEditor.svelte  DynamicPropertyEditor.svelte  GraphView.svelte  Sidebar.svelte  StatusBar.svelte  TitleBar.svelte
frontend/src/lib/stores/: graphStore.ts  projectStore.ts  schemaStore.ts  uiStore.ts
src/: builder.rs  data_ingestion.rs  embedding_queue.rs  embeddings.rs  error.rs  inference_queue.rs  lemonade.rs  lemonade_client.rs  lib.rs  main.rs  schema.rs  schema_ingestion.rs  schema_manager.rs  search.rs  storage.rs  test_helpers.rs  text.rs  transcription.rs  types.rs  vector_search.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/defaults/schemas/: artifact.schema.json  setting_reference.schema.json  transportation.schema.json
src-tauri/examples/schemas/: currency.schema.json  player_character.schema.json  system_reference.schema.json
src-tauri/src/: main.rs
src/ai/: embeddings.rs  mod.rs  transcription.rs
src/graph/: edges.rs  nodes.rs  storage.rs
src/hardware/: cpu.rs  gpu.rs  mod.rs  npu.rs
src/ingest/: data.rs
src/lemonade/: registry.rs  stack.rs
src/queue/: builder.rs  dispatch.rs  mod.rs  workers.rs
src/schema/: definition.rs  mod.rs
src/search/: mod.rs
