[workspace]
members = ["backend", "src-tauri"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
rpath = true

[profile.dev]
opt-level = 0
debug = true
rpath = true