[package]
name = "u-forge-ai"
version = "0.1.0"
edition = "2021"
description = "Local-first TTRPG worldbuilding tool with AI-powered knowledge graphs"
license = "MIT"
repository = "https://github.com/your-org/u-forge.ai"
keywords = ["ttrpg", "worldbuilding", "ai", "knowledge-graph", "local-first"]
categories = ["games", "text-processing"]

[dependencies]
# Database and storage
rocksdb = "0.23"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Async runtime and utilities
tokio = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Graph processing (for future use)
petgraph = "0.8"

# Vector search and embeddings
fastembed = { version = "3.11" }
hnsw_rs = "0.3"
fst = "0.4"
memmap2 = "0.9"

# Parallel processing
rayon = "1.8"

# Async traits
async-trait = { workspace = true }

# HTTP client for optional cloud APIs
reqwest = { version = "0.12", features = ["json"], optional = true }

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

# Temp directories for examples
tempfile = "3.20"

# Regular expressions for pattern validation
regex = { workspace = true }

# ORT Override
ort-sys = { version = "=2.0.0-rc.4", default-features = false }
ort = { version = "=2.0.0-rc.4", features = ["download-binaries"] }

[dev-dependencies]
tempfile = "3.20"

[[example]]
name = "cli_demo"
path = "examples/cli_demo.rs"

[features]
default = []
cloud-apis = ["reqwest"]