[package]
name = "u-forge-cxx-qt"
version = "0.1.0"
authors = ["u-forge.ai team"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"] }
