[package]
name = "u-forge-ai-tauri"
version = "0.1.0"
description = "Tauri backend for u-forge.ai"
authors = ["u-forge.ai contributors"]
license = "MIT"
repository = "https://github.com/your-org/u-forge.ai"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core dependencies
tauri = { version = "1.6", features = ["window-all"] }
serde = { workspace = true }
serde_json = { workspace = true }

# u-forge.ai core library
u-forge-ai = { path = "../backend" }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
env_logger = "0.10"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID for session management
uuid = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Temporary directories for development
tempfile = "3.20"

# File system operations
walkdir = "2.4"

# Regular expressions
regex = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
