[package]
name = "u-forge-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
u-forge-core = { path = "../u-forge-core" }
rig-core = "0.35.0"
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tiktoken-rs = "0.11.0"
tokio = { version = "1.45", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
