[package]
name = "u-forge-core"
version = "0.1.0"
edition = "2021"
description = "Local-first TTRPG worldbuilding tool with AI-powered knowledge graphs"
license = "MIT"
repository = "https://github.com/your-org/u-forge.ai"
keywords = ["ttrpg", "worldbuilding", "ai", "knowledge-graph", "local-first"]
categories = ["games", "text-processing"]

[dependencies]
# Database and storage (SQLite — no C++ compiler required)
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlite-vec = "0.1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Identifiers
uuid = { version = "1.17", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# HTTP client (required for Lemonade Server embedding/reranking API)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

# Regular expressions (schema property validation)
regex = "1.10"

# TOML configuration (device config files)
toml = "0.8"

# Temp directories (tests + examples)
tempfile = "3.20"

[dev-dependencies]
tempfile = "3.20"

[[example]]
name = "cli_demo"
path = "examples/cli_demo.rs"

[features]
default = []
