[package]
name = "u-forge-ui-gpui"
version = "0.1.0"
edition = "2021"

[lib]
name = "u_forge_ui_gpui"
path = "src/lib.rs"

[[bin]]
name = "u-forge-ui-gpui"
path = "src/main.rs"

[dependencies]
u-forge-core = { path = "../u-forge-core" }
u-forge-agent = { path = "../u-forge-agent" }
u-forge-graph-view = { path = "../u-forge-graph-view" }
u-forge-ui-traits = { path = "../u-forge-ui-traits" }
gpui = "0.2.2"
glam = "0.29"
parking_lot = "0.12"
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tempfile = "3.20"
futures = "0.3"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.17", features = ["v4"] }
chrono = "0.4"
